[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/items/scenes/Projectile.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 1.7694
height = 6.02173

[node name="Projectile" type="Area2D"]
collision_layer = 0
collision_mask = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.5, -0.5 )
rotation = -1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Arrow_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Arrow_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
